fix: adjust logo margin in navbar for better alignment

--- a/NestGuardProject/static/css/navbar.css
+++ b/NestGuardProject/static/css/navbar.css
@@ -44,6 +44,7 @@ body {
 .logo-component img{
     width: auto;
     height: 55px;
+    margin-top: 7px;
 }
 
 
